Fix contrasted backgrounds for nav

--- a/src/scss/partials/_menu.scss
+++ b/src/scss/partials/_menu.scss
@@ -32,9 +32,12 @@
 
   &__link {
     transition: 400ms all ease;
-    color: $black;
-    @include mq(ns) {
-      color: $white;
+    color: $near-black;
+    &--cover {
+      color: $near-black;
+      @include mq(ns) {
+        color: $white;
+      }
     }
   }
 
